--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Listings#index</h1>
-<p>Find me in app/views/listings/index.html.erb</p>
+
+<section id="sidebar">
+	
+</section>
+
+<section id="search-results">
+	<header>Found <%= pluralize(@listings.count, "result") %></header>
+	<%= render @listings %>
+</section>
