--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= debug params if Rails.env.development? %>
+  <hr>
+  <header>
+    <h1>CARS</h1>
+    <nav>
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">contact</a></li>
+        <li><a href="#">sign in</a></li>
+      <ul>
+    </nav>
+  </header>
+  
+	<section class="clear-fix" id="content">
+    <%= yield %>
+  </section>
 </body>
 </html>
