--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= debug params if Rails.env.development? %>
-  <hr>
+  <% if Rails.env.development? %>
+    <%= debug params %>
+    <hr>
+  <% end %>
   <header>
     <h1>CARS</h1>
     <nav>
