--- a/app/views/listings/_infinite_scroll_params.html.erb
+++ b/app/views/listings/_infinite_scroll_params.html.erb
@@ -15,5 +15,8 @@
                       
 <%= hidden_field_tag(:price_to, params[:search][:price_to], 
                       class: "scroll", id: "price-to") %>
+                        
+<%= hidden_field_tag(:total_pages, @listings.total_pages,
+                      class: "scroll", id: "total-pages") %>
                       
-<%= hidden_field_tag(:page, params[:page].to_i, class: "scroll", id: "page") %>
+<%= hidden_field_tag(:page, params[:page].to_i+1, class: "scroll", id: "page") %>
