--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,71 +1,19 @@
 <h1>Listings#index</h1>
 
 <section id="sidebar">
-	<%= form_tag(listings_url, method: "get", class: "search") do %>
-  <table>
-    <tr>
-      <td>
-    <%= label_tag :year_from, "Year" %>
-    <%= select_tag(:year_from,
-                    options_for_select((1930..Time.now.year).to_a.reverse, 
-                                        params[:search][:year_from]), 
-                    prompt: "From", name: "search[year_from]") %>
-    <%= select_tag(:year_to,
-                    options_for_select((1930..Time.now.year).to_a.reverse,
-                                        params[:search][:year_to]), 
-                    prompt: "To", name: "search[year_to]") %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-    <%= select_tag(:make_id, 
-                    options_for_select(@makes_array, 
-                                       params[:search][:make_id]), 
-                    prompt: "Make", name: "search[make_id]") %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-    <%= select_tag(:model_id, 
-                    options_for_select(@models_array, 
-                                       params[:search][:model_id]),
-                    prompt: "Model", name: "search[model_id]") %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-    <%= label_tag :price_from, "Price" %>
-    <%= number_field_tag(:price_from, params[:search][:price_from], 
-                          min: 0, step: 50, name: "search[price_from]") %>
-    <%= label_tag :price_to, "to" %>
-    <%= number_field_tag(:price_to, params[:search][:price_to], 
-                          min: 0, step: 50, name: "search[price_to]") %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-    <%= submit_tag "Search" %>
-      </td>
-    </tr>
-  </table>
-	<% end %>
+<%= render partial: "listings/search_form" %>
 </section>
 
 <section id="search-results" class="clear-fix">
-  <div id="pages-container" class="clear-fix">
   <%= render partial: "search_results" %>
-  </div>
+  
+  <%= render partial: "listings/infinite_scroll_params" %>
 </section>
-<%= render partial: "listings/infinite_scroll_params" %>
+
+
+
 <script>
 $(document).ready(function () {
-  $("#search-results").on("ajax:success", 
-                          ".nav-button-form.nav-next", function (event, data) {
-                            console.log("HIT")
-    $("div#pages-container").append(data);
-    $("div#pages-container").animate({"left": "-=515px"}, 1500);
-  });
-  
   var requestingNextPage = false;
   
   $(window).scroll(function(event) {
@@ -77,40 +25,37 @@ $(document).ready(function () {
     if (distanceFromBottom() < 500 && !requestingNextPage) {
       requestingNextPage = true;
       var params = $("input[type='hidden'].scroll")
-      $.ajax({
-        url: "<%= listings_url %>",
-        dataType: "html",
-        data: {
-          "search[year_from]": params.filter("#year-from").val(),
-          "search[year_to]": params.filter("#year-to").val(),
-          "search[make_id]": params.filter("#make-id").val(),
-          "search[model_id]": params.filter("#model-id").val(),
-          "search[price_from]": params.filter("#price-from").val(),
-          "search[price_to]": params.filter("#price-to").val(),
-          "page": params.filter("#page").val()
-        },
-        beforeSend: function () {
-          console.log("HIT beforeSend")
-        },
-        success: function (data) {
-          console.log("HIT success");
-          console.log(data);
-          
-          $("#pages-container").append(data);
-          var nextPageNum = (parseInt(params.filter("#page").val())+1);
-          params.filter("#page").val(nextPageNum);
-          requestingNextPage = false;
-        }
-        
-      })
+      
+      if (parseInt(params.filter("#page").val()) <= 
+                              parseInt(params.filter("#total-pages").val())) {
+        $.ajax({
+          url: "<%= listings_url %>",
+          dataType: "html",
+          data: {
+            "search[year_from]": params.filter("#year-from").val(),
+            "search[year_to]": params.filter("#year-to").val(),
+            "search[make_id]": params.filter("#make-id").val(),
+            "search[model_id]": params.filter("#model-id").val(),
+            "search[price_from]": params.filter("#price-from").val(),
+            "search[price_to]": params.filter("#price-to").val(),
+            "page": params.filter("#page").val()
+          },
+          beforeSend: function () {
+            $("#end-of-page").show();
+          },
+          success: function (data) {
+            $("#end-of-page").hide();
+            $("#end-of-page").before(data);
+            var nextPageNum = (parseInt(params.filter("#page").val())+1);
+            params.filter("#page").val(nextPageNum);
+            requestingNextPage = false;
+          }
+        })
+      } else {
+        $("#end-of-list").show();
+      }   
     };
   })
   
-  $("#search-results").on("ajax:success", 
-                          ".nav-button-form.nav-prev", function (event, data) {
-                            console.log("HIT")
-    //$("div#pages-container").prepend(data);
-    $("div#pages-container").animate({"left": "+=515px"}, 1500);
-  });
 });
 </script>
