--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -38,6 +38,7 @@ $(document).ready(function () {
             "search[model_id]": params.filter("#model-id").val(),
             "search[price_from]": params.filter("#price-from").val(),
             "search[price_to]": params.filter("#price-to").val(),
+            "search[sort]": params.filter("#sort").val(),
             "page": params.filter("#page").val()
           },
           beforeSend: function () {
