Better layout of a page params in infinite scroll hidden params.

--- a/app/views/listings/_infinite_scroll_params.html.erb
+++ b/app/views/listings/_infinite_scroll_params.html.erb
@@ -22,4 +22,5 @@
 <%= hidden_field_tag(:total_pages, @listings.total_pages,
                       class: "scroll", id: "total-pages") %>
                       
-<%= hidden_field_tag(:page, params[:page].to_i+1, class: "scroll", id: "page") %>
+<%= hidden_field_tag(:page, params[:page].to_i+1, 
+                      class: "scroll", id: "page") %>
