--- a/app/views/listings/_search_form.html.erb
+++ b/app/views/listings/_search_form.html.erb
@@ -37,13 +37,15 @@
                     name="search[price_from]"
                  pattern="[0-9]*"
                       id="price_from"
-               maxlength="5">▰ 
+               maxlength="5"
+                   value="<%= params[:search][:price_from] %>">▰ 
       <input placeholder="To"
                     type="text" 
                     name="search[price_to]" 
                  pattern="[0-9]*"
                       id="price_to"
-               maxlength="9">
+               maxlength="9"
+                   value="<%= params[:search][:price_to] %>">
     </td>
   </tr>
   <tr>
